refactor: Organizar documentación y remover scrapethissite
- Mover documentación (.md) a carpeta docs/ (excepto README.md)
- Actualizar README.md con links a documentación
- Eliminar todo lo relacionado con scrapethissite:
  - Eliminar parser_scrapethissite.py
  - Eliminar scrapethissite_spider.py
  - Eliminar scrape_this_site_use_case.py
  - Actualizar referencias en código y documentación
- Corregir errores de linting (imports no usados, whitespace)
- Verificar que spiders (bcra, universal) funcionan correctamente

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,11 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I"]
-ignore = ["E501"]  # Ignore line too long (we'll use ruff format for that)
+ignore = [
+    "E501",  # Ignore line too long (we'll use ruff format for that)
+    "FIX002",  # Ignore TODO comments warnings
+    "FIX003",  # Ignore TODO comments warnings
+]
 
 [tool.ruff.format]
 quote-style = "double"
